--- a/static/index.html
+++ b/static/index.html
@@ -1,21 +1,64 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-	<title>Python Starter Application</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="stylesheet" href="stylesheets/style.css" />
-</head>
-<body>
-	<table>
-		<tr>
-			<td style='width: 30%;'>
-				<img class = 'newappIcon' src='images/newapp-icon.png'>
-			</td>
-			<td>
-				<h1 id = "message">Hello Harshini!</h1>
-				<p class='description'></p> Welcome to <span class="blue">Python</span>.
-			</td>
-		</tr>
-	</table>
-</body>
+	<body>
+
+		<center>
+			<header> <h1> Home </h1> </header></center>
+		<br> <br>
+		<h2> Assignment 3 - Memcache</h2>
+		<br>
+=========================================================================================================================
+    <br>
+	<form action="/createtable" method="post" enctype="multipart/form-data">
+        <strong>Create table from csv</strong>
+        <input type="submit" value="Create">
+     </form>
+        <p>{{msg}}</p>
+        <p>Time Taken :{{timediff}}</p>
+
+    <br>
+
+==============================================================================================================================
+     <p>Search for details based on region</p>
+       <form action="{{url_for('Magnitude')}}" method="POST" enctype="multipart/form-data">
+         <input type="text" value="" name="Magnitude" placeholder="Enter Region">
+         <input type="submit" value="Find">
+       </form>
+		 <p> Number </p>
+		 <p>Time Taken :{{timediff}}</p>
+       <table border = 1>
+         <thead>
+              <td>Date</td>
+            <td>Magnitude</td>
+
+         </thead>
+         {% for row in rows %}
+
+         <tr>
+            <td>{{row["Date"]}}</td>
+            <td>{{row["mag"]}}</td>
+
+		 </tr>
+		   {% endfor %}
+         </table>
+
+
+==============================================================================================================================
+    <form action="/random" method="post" enctype="multipart/form-data">
+        <input type="text" name="count" placeholder="Enter count">
+        <input type="submit" value="Random Queries">
+    </form>
+    <p><b>Time taken: </b> {{totaltimer}} </p>
+    <table>
+    <b>Row count: </b>{{ countr2 }}
+    {% for col in resu2 %}
+    <tr>
+             <td>{{ col }}</td>
+    </tr>
+     {% endfor %}
+    </table>
+
+
+
+	</body>
 </html>
