--- a/static/index.html
+++ b/static/index.html
@@ -44,19 +44,19 @@
 
 
 ==============================================================================================================================
-    <form action="/random" method="post" enctype="multipart/form-data">
-        <input type="text" name="count" placeholder="Enter count">
-        <input type="submit" value="Random Queries">
-    </form>
-    <p><b>Time taken: </b> {{totaltimer}} </p>
-    <table>
-    <b>Row count: </b>{{ countr2 }}
-    {% for col in resu2 %}
-    <tr>
-             <td>{{ col }}</td>
-    </tr>
-     {% endfor %}
-    </table>
+    <!--<form action="/random" method="post" enctype="multipart/form-data">-->
+        <!--<input type="text" name="count" placeholder="Enter count">-->
+        <!--<input type="submit" value="Random Queries">-->
+    <!--</form>-->
+    <!--<p><b>Time taken: </b> {{totaltimer}} </p>-->
+    <!--<table>-->
+    <!--<b>Row count: </b>{{ countr2 }}-->
+    <!--{% for col in resu2 %}-->
+    <!--<tr>-->
+             <!--<td>{{ col }}</td>-->
+    <!--</tr>-->
+     <!--{% endfor %}-->
+    <!--</table>-->
 
 
 
