--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,8 @@
         <p>Time Taken :{{timediff}}</p>
 
     <br>
-
+	</body>
+</html>
 ==============================================================================================================================
      <p>Search for details based on region</p>
        <form action="{{url_for('Magnitude')}}" method="POST" enctype="multipart/form-data">
@@ -54,6 +55,7 @@
          </tr>
 		   {% endfor %}
          </table>
+
 
 
 
